src/assets/stylesheets/_shared.scss
/* shared */
#bodyTop {
  height: rem(76px);

  @include media-breakpoint-down(md) {
    height: rem(54px);
  }
}

// button
.btn {
  width: rem(180px);
  font-size: rem(14px);
  line-height: rem(19px);
  font-weight: 300;
  letter-spacing: rem(0.638px);
  text-transform: uppercase;
  padding: rem(10px 10px 9px);
  border-radius: rem(6px);
}

button:focus {
  outline: none;
}

// utility classes
.no-scroll {
  overflow: hidden;
}

.no-md-scroll {
  @include media-breakpoint-down(md) {
    overflow: hidden;
  }
}

.d-md-none {
  @include media-breakpoint-down(md) {
    overflow: hidden;
  }
}

.font-weight-thin {
  font-weight: 100 !important;
}

/* Page Section */
.section-content {
  padding: rem(100px 0);

  @include media-breakpoint-down(sm) {
    padding: 0;
  }

  .btn-wrap {
    @include flexbox();
    @include justify-content(center);

    @include media-breakpoint-down(sm) {
      @include flex-direction(column);
      @include align-items(center);
      margin: 0 0 rem(40px);
    }

    .btn {
      margin: 0 rem(20px) 0 0;

      @include media-breakpoint-down(sm) {
        margin: 0 0 rem(20px);
      }

      &:last-child {
        margin: 0;
      }
    }
  }
}
/* Page Section end */

.card-wrap {
  margin: 0 0 rem(80px);

  @include media-breakpoint-down(sm) {
    margin: 0 rem(-15px 40px);
  }

  &.-striped {
    .card:nth-of-type(even) {
      background-color: $gray-95;
    }
  }
}

.card-expertise {
  border: 0;
  border-radius: 0;
  background-color: transparent;
  padding: rem(80px 16px);

  @include media-breakpoint-down(sm) {
    padding: rem(40px 16px);
  }

  .card-body {
    position: relative;
    @include flex(0 0 80%);
    max-width: 80%;
    margin: 0 auto;
    padding: 0;

    @include media-breakpoint-down(sm) {
      @include flex(1 1 auto);
      max-width: 100%;
      text-align: center;
    }
  }

  .card-title {
    font-size: rem(36px);
    font-weight: 300;
    line-height: rem(44px);
    margin-bottom: rem(32px);

    @include media-breakpoint-down(sm) {
      font-size: rem(32px);
      line-height: rem(39px);
      margin: 0 0 rem(32px);
    }
  }

  .card-img {
    width: auto;
    height: rem(100px);
    margin-bottom: rem(16px);
    @include border-radius(0);
  }

  .card-text {
    font-weight: 300;
    line-height: rem(24px);
    letter-spacing: 1px;
    text-align: justify;

    @include media-breakpoint-down(sm) {
      font-size: rem(14px);
      line-height: rem(21px);
      text-align: justify;
    }
  }
}

.scroll-top {
  position: absolute;
  top: rem(20px);
  right: 0;

  @include media-breakpoint-down(sm) {
    position: relative;
    top: unset;
    right: unset;
    text-align: right;
  }

  .btn-scroll {
    font-size: rem(14px);
    font-weight: 300;
    line-height: rem(20px);
    color: $gray-20;
    padding: rem(4px 8px);
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 1px;

    @include media-breakpoint-down(sm) {
      font-size: rem(10px);
    }
  }
}

.scroll-down {
  position: absolute;
  left: 50%;
  bottom: rem(22px);
  @include translate(-50%, 0);
  color: $gray-20;
  z-index: 3;
  text-decoration: none;

  @include media-breakpoint-down(md) {
    bottom: rem(8px);
  }

  @include media-breakpoint-down(sm) {
    display: none !important;
  }

  &:hover {
    text-decoration: none;
    color: $gray-20;
  }

  &.text-white {
    &:hover {
      color: $white;
    }
  }

  i {
    font-size: rem(48px);

    @include media-breakpoint-down(md) {
      font-size: rem(28px);
    }
  }
}

.media-wrap {
  margin: 0 0 rem(80px);

  @include media-breakpoint-down(sm) {
    margin: 0 0 rem(40px);
  }

  .media-heading {
    font-size: rem(32px);
    line-height: rem(39px);
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: rem(1px);
    text-align: center;
    margin: 0 0 rem(48px);

    @include media-breakpoint-down(sm) {
      margin: 0 0 rem(40px);
    }
  }

  .list-media {
    width: 50%;
    margin: 0 auto;

    @include media-breakpoint-down(md) {
      width: 75%;
    }

    @include media-breakpoint-down(sm) {
      width: 100%;
    }
  }

  .list-media-item {
    &:last-child {
      .card-media {
        margin: 0;
      }
    }
  }
}

.card-media {
  position: relative;
  border: 0 none;
  @include border-radius(0);
  @include boxShadow(2px 2px 38px -6px rgba(184, 184, 184, 1));

  margin: 0 0 rem(40px);

  @include media-breakpoint-down(sm) {
    margin: 0 0 rem(20px);
  }

  .card-img {
    @include border-radius(0);
  }

  .btn-link {
    display: inline-block;
    font-size: rem(14px);
    font-weight: 300;
    line-height: rem(17px);
    color: #00b1ff;
  }

  iframe {
    width: auto;
    height: rem(310px);
    border: none;

    @include media-breakpoint-down(md) {
      height: rem(290px);
    }

    @include media-breakpoint-down(sm) {
      height: rem(194px);
    }
  }
}

img {
  font-size: rem(12px);
  font-weight: 300;
  letter-spacing: 0.5px;
}

.padding-row {
  margin-right: 0px !important;
  margin-left: 0px !important;
}

.text-truncate-multi-line {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;

  &.-three-line {
    -webkit-line-clamp: 3;
  }

  &.-four-line {
    -webkit-line-clamp: 4;
  }
}

// Scroll
.scroll-y {
  min-height: 0;
  overflow-x: hidden !important;
  overflow-y: auto !important;
  scroll-behavior: smooth;
  @include scrollbars();
}

.scroll-x {
  min-width: 0;
  overflow-x: auto !important;
  overflow-y: hidden !important;
  scroll-behavior: smooth;
  @include scrollbars();
}
/* shared end */

.link-item-wrap {
  padding: rem(40px) 0 rem(80px);

  .link-item-list {
    flex-direction: column;
    @include media-breakpoint-up(lg) {
      flex-direction: row;
      &::before {
        content: "";
        position: absolute;
        left: 0;
        top: 50%;
        transform: translateY(-50%);
        background-color: #e86055;
        width: 100%;
        height: rem(4px);
      }
    }
  }

  .link-item {
    padding: 0 rem(24px);
    z-index: 9999;

    > a {
      border-radius: 12px;
      max-width: rem(329px);
      width: rem(329px);
      font-size: rem(20px);
      line-height: rem(24px);
      color: $white;
      font-weight: 600;
      background-size: cover !important;
      background-position: center !important;
      padding: 40px 24px;

      @include media-breakpoint-up(lg) {
        font-size: rem(31px);
        line-height: rem(36px);
      }

      &:focus-visible {
        outline-offset: unset;
        outline: none;
      }

      &.-leadership {
        background: url("../images/revampImages/leadership-bg.png") no-repeat;
      }

      &.-contact-us {
        background: url("../images/revampImages/contact-us-bg.png") no-repeat;
      }
    }

    .arrow-img {
      width: rem(25px);
    }

    &:not(:first-child) {
      margin-top: rem(24px);

      @include media-breakpoint-up(lg) {
        margin-top: 0;
      }
    }
  }
}

